<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="68dp"
        android:gravity="center"
        android:text="@string/register_for_whoa_weight"
        android:textColor = "?android:textColorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="34dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor = "?android:textColorPrimary"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="none|textEmailAddress"
        android:minHeight="48dp"
        android:textColor = "?android:textColorPrimary"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_marginTop="31dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor = "?android:textColorPrimary"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="32dp"
        android:text="@string/register" />


</RelativeLayout>