<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:text="@string/welcome_to_whoa_weight"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/user_state"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_state"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textColor="?android:textColorPrimary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:background="#673AB7"
        android:contentDescription="@string/Input_image"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="33dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="#673AB7"
        android:contentDescription="@string/Lock"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/ic_lock_idle_lock"
        tools:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <TextView
        android:id="@+id/user_state"
        android:layout_width="334dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:textColor="?android:textColorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>